--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
     "recharts": "^2.1.12"
   },
